fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ body {
 .column {
   display: flex;
   flex-direction: column;
-  flex-basis: 100%;
   flex: 1;
 }
 
@@ -66,8 +65,9 @@ h2 {
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
-  align-content: center;
+  align-self: center;
   justify-content: center;
+  
   flex: 1;
 }
 
@@ -76,6 +76,7 @@ h2 {
   align-content: flex-start;
   justify-content: flex-start;
   flex: 1;
+  padding-right: 30px;
 }
 
 #background_img {
